--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,9 +1,10 @@
 <% include partials/header %>
 
-<h1> This is the Landing page!!</h1>
 
-<p> Welcome to Vastu!</p>
+<div class="container">    
+    <p> Welcome to Vastu!</p>
+    <a href="sights">View All Sights</a>  
+</div>
 
-<a href="sights">View All Sights</a>
 
 <% include partials/footer %>
