--- a/views/sights/show.ejs
+++ b/views/sights/show.ejs
@@ -27,7 +27,7 @@
                 <img class="img-responsive" src="<%=sight.image%>">
                 <div class="caption-full">
                     <h4 class="pull-right">$<%=sight.price %></h4>
-                    <h1><a><%=sight.name%></a></h1>
+                    <h1><a><%=sight.name%></a></h1><span><h4><%=sight.city %></h4></span>
                     <p><%=sight.description %></p>
                     <p>Location:<%=sight.location %></p>
                     <p class="pull-right"><em>Submitted by-<%=sight.author.username %></em></p>
