--- a/views/sights/edit.ejs
+++ b/views/sights/edit.ejs
@@ -18,6 +18,9 @@
                     <input class="form-control" type="text" name="sights[location]" value="<%=data.location%>">
                 </div>
                 <div class="form-group">
+                    <input class="form-control" type="text" name="sights[city]" value="<%=data.city%>">
+                </div>
+                <div class="form-group">
                     <input class="form-control" type="text" name="sights[price]" value="<%=data.price%>">
                 </div>
                 <div class="form-group">
