--- a/views/sights/new.ejs
+++ b/views/sights/new.ejs
@@ -14,7 +14,10 @@
                     <input class="form-control" type="text" name="description" placeholder="Description">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" name="location" placeholder="Location">
+                    <input class="form-control" type="text" name="location" placeholder="Address">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" name="city" placeholder="City">
                 </div>
                 <div class="form-group">
                     <input class="form-control" type="text" name="price" placeholder="price">
