--- a/views/sights/show.ejs
+++ b/views/sights/show.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-<div class="container">
+<div class="container" style="padding-top: 70px;">
     <div class="row">
         <div class="col-md-3">
             <% if(currentUser){ %>
@@ -25,12 +25,14 @@
             <br>
 
             <div class="thumbnail">
-                <h4 style = "text-align: center;"><b>News and Events</b></h4>
+                
+
+                    <h4 style = "text-align: center;"><b>News and Events</b></h4>
                 <!-- start sw-rss-feed code --> 
                 <script type="text/javascript"> 
                     rssfeed_url = new Array(); 
                     rssfeed_url[0]="https://realty.economictimes.indiatimes.com/rss/topstories";  
-                    rssfeed_frame_width="252"; 
+                    rssfeed_frame_width="100%"; 
                     rssfeed_frame_height="400"; 
                     rssfeed_scroll="on"; 
                     rssfeed_scroll_step="6"; 
@@ -67,9 +69,9 @@
                     </script> 
                     <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script> 
                     <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
-                    <div style="color:#ccc;font-size:10px; text-align:right; width:400px;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank" style="color:#ccc;"></a></div> 
+                    <div style="color:#ccc;font-size:10px; text-align:right; width:400px;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank" style="color:#ccc;"></a></div>  
                     <!-- end sw-rss-feed code -->
-                    </div>
+            </div>
 
 
 
