--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,7 +30,7 @@
                         </a>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="sights">Sights</a></li>
+                            <li><a href="/sights">Sights</a></li>
                             <% if(!currentUser) {%>
                             <li><a href="/login">Login</a></li>
                             <li><a href="/register">Register</a></li>
