--- a/views/sights/show.ejs
+++ b/views/sights/show.ejs
@@ -108,16 +108,15 @@
                 <br>
                 <%sight.comments.forEach(function(comment){%>
                 <div class="row">
-                    <div class="col-md-12">
-                        <strong><%=comment.author.username%></strong>
-                        <span class="pull-right">10 days ago</span>
-                        <p>
+                    <div class="col-md-12">                        
+                        <p style="text-align: left;">
                             <%=comment.text%>
                         </p>
+                        <p class="pull-right"><em>-by <%=comment.author.username%></em></p>
                     </div>
                      <!--currentUser is set in app.js-->
                     <%if(currentUser && currentUser._id.equals(sight.author.id)){ %>
-                    <div>
+                    <div style="text-align: right;">
                         <a class="btn btn-warning btn-xs" href="/sights/<%=sight._id%>/comments/<%=comment._id%>/edit">Edit!</a>
                         <form id="delete-form" action="/sights/<%=sight._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
                             <button class="btn btn-xs btn-danger">Delete</button>
