Adding the icons

--- a/views/sights/show.ejs
+++ b/views/sights/show.ejs
@@ -81,7 +81,7 @@
                 <img class="img-responsive" src="<%=sight.image%>">
                 <div class="caption-full">
                     <h1 class="pull-left" style="display: inline; color:rgb(70, 133, 204)"><%=sight.name%></h1>
-                    <h4 style="display: inline;" class="pull-right">$<%=sight.price %></h4>
+                    <h4 style="display: inline;" class="pull-right"><img width="15px" height="17px" src="/rupee-indian.svg"><%=sight.price %></h4>
                     <br>
                     <br>
                     <br>
