--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 col-sm-12 col-md-12">
                     <h1>Vaastu!</h1>
-                    <p>Buy and Sell your property hassle free!</p> 
+                    <p>Buy and Sell your Estate hassle free!</p> 
                 </div>
             </div>
         </div>
